Log foreground duration for failed provisional loads.

UKM logs foreground duration for both committed and provisional loads.
This change makes core UMA metrics more consistent with UKM.

This metric will also help to measure the impact of the delayed navigation
experiment, where we expect there to be an increased number of
failed provisional loads.

BUG=705058

Review-Url: https://codereview.chromium.org/2771293002
Cr-Commit-Position: refs/heads/master@{#459576}

Former-commit-id: 8db499251a795b754dbef05b1d73a5e877001da8